kubernetes/onepassword/network-policy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns
  namespace: onepassword-operator
spec:
  endpointSelector: {}
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP

---
# Allow secrets-injector and operator to reach 1Password API and Kubernetes API
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-operator-egress
  namespace: onepassword-operator
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - world
        - kube-apiserver
    - toServices:
        - k8sService:
            serviceName: kubernetes
            namespace: default

---
# Allow operator to reach Connect server (and Connect server to reach 1Password API)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: onepassword-operator
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: onepassword-operator
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: onepassword-operator

---
# Allow kube-apiserver to call webhooks in this namespace
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-webhook-ingress
  namespace: onepassword-operator
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - kube-apiserver
